force-app/main/default/objects/Scenario_Logic_Coefficient__c.object
<CustomObject>
    <description>Links two variables together (e.g. an existing and a replacement product) and captures how baseline is adjusted year over year for forecasting.</description>
    <fields>
        <fullName>Baseline_Variable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Baseline Variable</label>
        <referenceTo>Scenario_Variable__c</referenceTo>
        <relationshipLabel>Baseline Coefficients</relationshipLabel>
        <relationshipName>Scenario_Logic_Coefficients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <label>Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emissions</fullName>
                    <default>true</default>
                    <label>Emissions</label>
                </value>
                <value>
                    <fullName>Electricity Consumption</fullName>
                </value>
                <value>
                    <fullName>Fuel Consumption</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
                <value>
                    <fullName>Waste</fullName>
                </value>
                <value>
                    <fullName>Renewables</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coefficient_Operation__c</fullName>
        <label>Coefficient Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multiply Baseline By</fullName>
                </value>
                <value>
                    <fullName>Divide Baseline By</fullName>
                </value>
                <value>
                    <fullName>Add To Baseline</fullName>
                </value>
                <value>
                    <fullName>Subtract From Baseline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coefficient_Spread_Value__c</fullName>
        <label>Coefficient Spread Value</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coefficient_Spread__c</fullName>
        <label>Coefficient Spread</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Even Annual Spread</fullName>
                    <default>true</default>
                    <label>Even Annual Spread</label>
                </value>
                <value>
                    <fullName>Annualized Increase</fullName>
                </value>
                <value>
                    <fullName>Annualized Decrease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coefficient_Value__c</fullName>
        <label>Coefficient Value</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Variable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Variable</label>
        <referenceTo>Scenario_Variable__c</referenceTo>
        <relationshipLabel>Target Coefficients</relationshipLabel>
        <relationshipName>Scenario_Logic_Coefficients1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Scenario Logic Coefficient</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scenario Logic Coefficient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenario Logic Coefficients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>